# temporal-mlops

./: .gitignore  DEMO.md  README.md  docker-compose.yml  example.env  init.sql  pyproject.toml
config/: dev.yml  prod.yml
models/: abalone_model_1755882060.joblib  abalone_model_1755882155.joblib  abalone_model_1755882181.joblib  abalone_model_1755882226.joblib
src/: worker.py  worker_encrypted.py
src/activities/: data_processing.py  deployment.py  experiment_tracking.py  quality_gate.py  training.py
src/encryption/: encryption.py
src/mlops_temporal_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/triggers/: file_watcher.py
src/workflows/: mlops_workflow.py
ui/: dashboard.py
